--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,22 @@
 body{
-    color: deeppink;
+    color: rgb(23, 10, 10);
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid rgb(37, 10, 10);
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
