--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,10 +7,25 @@ body{
     padding: 0;
 }
 
+#cabecera{
+    background: rgb(41, 41, 226);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5px;
+    box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid rgb(37, 10, 10);
     margin: 0 auto;
@@ -19,4 +34,8 @@ body{
 #container h1
 {
     font-size: 20px;
+}
+
+#post{
+    padding: 1em;
 }
