--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(23, 10, 10);
     text-align: center;
-    font-family: "Arial";
+    font-family: 'Island Moments', cursive;
     font-size: 16px;
     margin: 0;
     padding: 0;
