Cambiamos la tipografia de todo el texto a Manuscrita gracias a Google Font

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,7 @@ body{
     color: rgb(23, 10, 10);
     text-align: center;
     font-family: 'Island Moments', cursive;
+font-family: 'Sevillana', cursive;
     font-size: 16px;
     margin: 0;
     padding: 0;
