Modifique la cabecera y el color del texto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: rgb(23, 10, 10);
+    color: red;
     text-align: center;
     font-family: 'Island Moments', cursive;
 font-family: 'Sevillana', cursive;
