--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: blue;
+    color:black;
     text-align: center;
     font-family: 'Island Moments', cursive;
     font-family: 'Sevillana', cursive;
@@ -9,12 +9,17 @@ body{
 }
 
 #cabecera{
-    background: rgb(41, 41, 226);
+    background: rgb(41, 41, 226) url(../imagenes/nave.jpg);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5px;
     box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -38,5 +43,6 @@ body{
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
